fix spacing in the nav

--- a/src/components/browse.css
+++ b/src/components/browse.css
@@ -16,7 +16,7 @@
   background-color: black;
   height: 70px;
   justify-content: center;
-  gap: 46%;
+  gap: 41%;
   margin: auto;
   align-items: center;
   background: linear-gradient(
